docs: Update html.mdx

--- a/docs/misc/html.mdx
+++ b/docs/misc/html.mdx
@@ -40,6 +40,7 @@ Allows you to tie HTML content to any object of your scene. It will be projected
   calculatePosition={(el: Object3D, camera: Camera, size: { width: number; height: number }) => number[]} // Override default positioning function. (default=undefined) [ignored in transform mode]
   occlude={[ref]} // Can be true or a Ref<Object3D>[], true occludes the entire scene (default: undefined)
   onOcclude={(hidden) => null} // Callback when the visibility changes (default: undefined)
+  transparent // sets the default shader material to transparent (default:false)
   {...groupProps} // All THREE.Group props are valid
   {...divProps} // All HTMLDivElement props are valid
 >
