--- a/docs/controls/face-controls.mdx
+++ b/docs/controls/face-controls.mdx
@@ -69,3 +69,28 @@ export type FaceControlsApi = THREE.EventDispatcher & {
   facemeshApiRef: RefObject<FacemeshApi>
 }
 ```
+
+## Breaking changes
+
+### 9.120.0
+
+<details>
+
+<summary>`FaceControls` was [simplified](https://github.com/pmndrs/drei/pull/2242).</summary>
+
+Following props were deleted:
+
+- `autostart`: now use `videoTexture.start`
+- `webcam`: instead of `webcam: false`, you can now [`manualDetect`](http://localhost:6006/?path=/story/controls-facecontrols--face-controls-st-2)
+- `webcamVideoTextureSrc`: now use `videoTexture.src` (or instantiate your own video-texture[^1] outside)
+- `onVideoFrame`: now use `videoTexture.onVideoFrame`  (or instantiate your own video-texture[^1] outside)
+
+Following api methods/fields were deleted:
+
+- `detect`: you can now [`manualDetect`](http://localhost:6006/?path=/story/controls-facecontrols--face-controls-st-2) outside and pass `faceLandmarkerResult`
+- `webcamApiRef`: if you need `videoTextureRef`, instantiate your own video-texture[^1] outside
+- `play`/`pause`: same, if you need the `video` object, instantiate your own video-texture[^1] outside
+
+[^1]: `<VideoTexture>` or `<WebcamVideoTexture>`
+
+</details>
