docs: Update resize.mdx

--- a/docs/staging/resize.mdx
+++ b/docs/staging/resize.mdx
@@ -6,13 +6,7 @@ sourcecode: src/core/Resize.tsx
 [![](https://img.shields.io/badge/-storybook-%23ff69b4)](https://drei.pmnd.rs/?path=/story/staging-resize)
 
 <Grid cols={4}>
-  <a href="https://codesandbox.io/s/6yg0i3">
-    <img
-      width="20%"
-      src="https://user-images.githubusercontent.com/76580/234665568-2be311d2-1896-4f82-ae20-b10b44c1e952.png"
-      alt="Demo"
-    />
-  </a>
+  <Codesandbox id="6yg0i3" />
 </Grid>
 
 Calculates a boundary box and scales its children so the highest dimension is constrained by 1. NB: proportions are preserved.
