--- a/docs/controls/motion-path-controls.mdx
+++ b/docs/controls/motion-path-controls.mdx
@@ -14,29 +14,29 @@ Motion path controls, it takes a path of bezier curves or catmull-rom curves as 
 ```tsx
 type MotionPathProps = JSX.IntrinsicElements['group'] & {
   /** An optional array of THREE curves */
-  curves?: THREE.Curve<THREE.Vector3>[];
+  curves?: THREE.Curve<THREE.Vector3>[]
   /** Show debug helpers */
-  debug?: boolean;
+  debug?: boolean
   /** Color of debug helpers */
-  debugColor?: THREE.ColorRepresentation;
+  debugColor?: THREE.ColorRepresentation
   /** The target object that is moved, default: null (the default camera) */
-  object?: React.MutableRefObject<THREE.Object3D>;
+  object?: React.MutableRefObject<THREE.Object3D>
   /** An object where the target looks towards, can also be a vector, default: null */
-  focus?: [x: number, y: number, z: number] | React.MutableRefObject<THREE.Object3D>;
+  focus?: [x: number, y: number, z: number] | React.MutableRefObject<THREE.Object3D>
   /** Should the target object loop back to the start when reaching the end, default: true */
-  loop?: boolean;
+  loop?: boolean
   /** Position between 0 (start) and end (1), if this is not set useMotion().current must be used, default: null */
-  offset?: number;
+  offset?: number
   /** Optionally smooth the curve, default: false */
-  smooth?: boolean | number;
+  smooth?: boolean | number
   /** Damping tolerance, default: 0.00001 */
-  eps?: number;
+  eps?: number
   /** Damping factor for movement along the curve, default: 0.1 */
-  damping?: number;
+  damping?: number
   /** Damping factor for lookAt, default: 0.1 */
-  focusDamping?: number;
+  focusDamping?: number
   /** Damping maximum speed, default: Infinity */
-  maxSpeed?: number;
+  maxSpeed?: number
 }
 ```
 
