docs: fix useAnimations source link

--- a/docs/abstractions/use-animations.mdx
+++ b/docs/abstractions/use-animations.mdx
@@ -1,6 +1,6 @@
 ---
 title: useAnimations
-sourcecode: src/core/useAnimations.ts
+sourcecode: src/core/useAnimations.tsx
 ---
 
 [![](https://img.shields.io/badge/-storybook-%23ff69b4)](https://drei.pmnd.rs/?path=/story/abstractions-useanimations--use-animations-st)
