--- a/docs/abstractions/decal.mdx
+++ b/docs/abstractions/decal.mdx
@@ -13,7 +13,7 @@ sourcecode: src/core/Decal.tsx
 
 Abstraction around Three's `DecalGeometry`. It will use the its parent `mesh` as the decal surface by default.
 
-The decal box has to intersect the surface, otherwise it will not be visible. if you do not specifiy a rotation it will look at the parents center point. You can also pass a single number as the rotation which allows you to spin it.
+The decal box has to intersect the surface, otherwise it will not be visible. if you do not specify a rotation it will look at the parents center point. You can also pass a single number as the rotation which allows you to spin it.
 
 ```js
 <mesh>
