--- a/docs/abstractions/splat.mdx
+++ b/docs/abstractions/splat.mdx
@@ -30,7 +30,7 @@ type SplatProps = {
 <Splat src="https://huggingface.co/cakewalk/splat-data/resolve/main/nike.splat" />
 ```
 
-In order to depth sort multiple splats correectly you can either use alphaTest, for instance with a low value. But keep in mind that this can show a slight outline under some viewing conditions.
+In order to depth sort multiple splats correctly you can either use alphaTest, for instance with a low value. But keep in mind that this can show a slight outline under some viewing conditions.
 
 ```jsx
 <Splat alphaTest={0.1} src="foo.splat" />
