--- a/docs/misc/wireframe.mdx
+++ b/docs/misc/wireframe.mdx
@@ -32,15 +32,15 @@ Renders an Antialiased, shader based wireframe on or around a geometry.
   fillOpacity={0.25} // Opacity of the inner fill
   stroke={"#ff0000"} // Color of the stroke
   strokeOpacity={1} // Opacity of the stroke
-  thickness={0.05} // Thinkness of the lines
+  thickness={0.05} // Thickness of the lines
   colorBackfaces={false} // Whether to draw lines that are facing away from the camera
   backfaceStroke={"#0000ff"} // Color of the lines that are facing away from the camera
   dashInvert={true} // Invert the dashes
   dash={false} // Whether to draw lines as dashes
-  dashRepeats={4} // Number of dashes in one seqment
+  dashRepeats={4} // Number of dashes in one segment
   dashLength={0.5} // Length of each dash
   squeeze={false} // Narrow the centers of each line segment
-  squeezeMin={0.2} // Smallest width to squueze to
+  squeezeMin={0.2} // Smallest width to squeeze to
   squeezeMax={1} // Largest width to squeeze from
 />
 
