--- a/docs/performances/instances.mdx
+++ b/docs/performances/instances.mdx
@@ -102,7 +102,7 @@ void main() {
   ...
 ```
 
-👉 Note: While creating instances declaratively keeps all the power of components with reduced draw calls, it comes at the cost of CPU overhead. For cases like foliage where you want no CPU overhead with thousands of intances you should use THREE.InstancedMesh such as in this [example](https://codesandbox.io/s/grass-shader-5xho4?file=/src/Grass.js).
+👉 Note: While creating instances declaratively keeps all the power of components with reduced draw calls, it comes at the cost of CPU overhead. For cases like foliage where you want no CPU overhead with thousands of instances you should use THREE.InstancedMesh such as in this [example](https://codesandbox.io/s/grass-shader-5xho4?file=/src/Grass.js).
 
 ### Typed Instances
 
@@ -122,7 +122,7 @@ function App() {
         <InstancedAttribute name="myCustomAttribute" defaultValue={1} />
         <sphereGeometry />
         <shaderMaterial
-          // will recienve myCustomAttribute as an attribute
+          // will receive myCustomAttribute as an attribute
           vertexShader={`
               attribute float myCustomAttribute;
               void main() {
