--- a/docs/portals/mesh-portal-material.mdx
+++ b/docs/portals/mesh-portal-material.mdx
@@ -33,7 +33,7 @@ export type PortalProps = ThreeElements['shaderMaterial'] & {
   eventPriority?: number
   /** Optional render priority, defaults to 0 */
   renderPriority?: number
-  /** Optionally diable events inside the portal, defaults to false */
+  /** Optionally disable events inside the portal, defaults to false */
   events?: boolean
 }
 ```
