--- a/docs/shaders/mesh-discard-material.mdx
+++ b/docs/shaders/mesh-discard-material.mdx
@@ -7,7 +7,7 @@ A material that renders nothing. In comparison to `<mesh visible={false}` it can
 
 ```jsx
 <mesh castShadow>
-  <torusKnotGeonetry />
+  <torusKnotGeometry />
   <MeshDiscardMaterial />
   {/* Shadows and edges will show, but the model itself won't */}
   <Edges />
