--- a/docs/staging/accumulative-shadows.mdx
+++ b/docs/staging/accumulative-shadows.mdx
@@ -54,7 +54,7 @@ interface AccumulativeContext {
   getMesh: () => THREE.Mesh<THREE.PlaneGeometry, SoftShadowMaterialProps & THREE.ShaderMaterial>
   /** Resets the buffers, starting from scratch */
   reset: () => void
-  /** Updates the lightmap for a number of frames accumulartively */
+  /** Updates the lightmap for a number of frames accumulatively */
   update: (frames?: number) => void
   /** Allows children to subscribe. AccumulativeShadows will call child.update() in its own update function */
   setLights: React.Dispatch<React.SetStateAction<AccumulativeLightContext[]>>
