--- a/docs/staging/environment.mdx
+++ b/docs/staging/environment.mdx
@@ -123,7 +123,7 @@ Environment can also be ground projected, that is, put your model on the "ground
 <Environment ground />
 ```
 
-You can provide optional options to configure this projecion.
+You can provide optional options to configure this projection.
 
 ```jsx
 <Environment
