--- a/docs/staging/randomized-light.mdx
+++ b/docs/staging/randomized-light.mdx
@@ -38,7 +38,7 @@ type RandomizedLightProps = ThreeElements['group'] & {
 <RandomizedLight castShadow amount={8} frames={100} position={[5, 5, -10]} />
 ```
 
-## Refernce api
+## Reference api
 
 ```jsx
 interface AccumulativeLightContext {
