--- a/docs/staging/shadow-alpha.mdx
+++ b/docs/staging/shadow-alpha.mdx
@@ -17,7 +17,7 @@ Makes an object's shadow respect its opacity and alphaMap.
 </mesh>
 ```
 
-> Note: This component uses Screendoor transparency using a dither pattern. This pattern is notacible when the camera gets close to the shadow.
+> Note: This component uses Screendoor transparency using a dither pattern. This pattern is noticeable when the camera gets close to the shadow.
 
 <details>
   <summary>Maintenance</summary>
