--- a/docs/staging/spot-light-shadow.mdx
+++ b/docs/staging/spot-light-shadow.mdx
@@ -20,8 +20,8 @@ A shadow caster that can help cast shadows of different patterns (textures) onto
     scale={1} //  Scale of the shadow caster plane
     map={undefined} // Texture - Pattern of the shadow
     shader={undefined} // Optional shader to run. Lets you add effects to the shadow map. See bellow
-    width={512} // Width of the shadow map. The higher the more expnsive
-    height={512} // Height of the shadow map. The higher the more expnsive
+    width={512} // Width of the shadow map. The higher the more expensive
+    height={512} // Height of the shadow map. The higher the more expensive
   />
 </SpotLight>
 ```
