--- a/docs/staging/use-environment.mdx
+++ b/docs/staging/use-environment.mdx
@@ -20,7 +20,7 @@ You can use it without properties, which will default to px, nx, py, ny, pz, nz 
 const cubeTexture = useEnvironment()
 ```
 
-Or you can specificy from where to load the files.
+Or you can specify from where to load the files.
 
 ```jsx
 const presetTexture = useEnvironment({ preset: 'city' })
