--- a/docs/staging/camera-shake.mdx
+++ b/docs/staging/camera-shake.mdx
@@ -14,7 +14,7 @@ sourcecode: src/core/CameraShake.tsx
   </li>
 </Grid>
 
-A component for applying a configurable camera shake effect. Currently only supports rotational camera shake. Pass a ref to recieve the `ShakeController` API.
+A component for applying a configurable camera shake effect. Currently only supports rotational camera shake. Pass a ref to receive the `ShakeController` API.
 
 If you use shake in combination with controls make sure to set the `makeDefault` prop on your controls, in that case you do not have to pass them via the `controls` prop.
 
