--- a/docs/misc/html.mdx
+++ b/docs/misc/html.mdx
@@ -1,6 +1,6 @@
 ---
 title: Html
-sourceocde: src/web/Html.tsx
+sourcecode: src/web/Html.tsx
 ---
 
 [![](https://img.shields.io/badge/-storybook-%23ff69b4)](https://drei.vercel.app/?path=/story/misc-html--html-st) ![](https://img.shields.io/badge/-Dom only-red)
@@ -94,7 +94,7 @@ You can also give HTML material properties using the `material` prop.
 />
 ```
 
-Enable shadows using the `castShadow` and `recieveShadow` prop.
+Enable shadows using the `castShadow` and `receiveShadow` prop.
 
 > Note: Shadows only work with a custom material. Shadows will not work with `meshBasicMaterial` and `shaderMaterial` by default.
 
