--- a/docs/controls/camera-controls.mdx
+++ b/docs/controls/camera-controls.mdx
@@ -42,3 +42,9 @@ const [mycam, setMycam] = useState<THREE.PerspectiveCamera | null>();
 <PerspectiveCamera ref={setMycam} />
 {myCam && <CameraControls camera={myCam} />}
 ```
+
+<details>
+  
+see: https://github.com/pmndrs/drei/blob/ca4e69c33e5b2eae9ad327c7319dda46de7fd4ae/src/core/CameraControls.tsx#L79-L82
+
+</detail>
