--- a/docs/controls/camera-controls.mdx
+++ b/docs/controls/camera-controls.mdx
@@ -34,13 +34,13 @@ type CameraControlsProps = {
 
 ### `[camera]`
 
-If you need CC to control a specific camera, make it reactive so `CameraControls` is mounted/updated "reactively" to `mycam`
+If you need <abbr title="CameraControls">CC</abbr> to control a specific camera, make it reactive so `CameraControls` is mounted/updated "reactively" to `mycam`
 
 ```tsx
 const [mycam, setMycam] = useState<THREE.PerspectiveCamera | null>();
 
 <PerspectiveCamera ref={setMycam} />
-{myCam && <CameraControls camera={myCam} />}
+{mycam && <CameraControls camera={mycam} />}
 ```
 
 <details>
@@ -51,7 +51,7 @@ see: https://github.com/pmndrs/drei/blob/ca4e69c33e5b2eae9ad327c7319dda46de7fd4a
 
 ### Inputs
 
-CC has ["user inputs"](https://yomotsu.github.io/camera-controls/#md:user-input-config) options:
+<abbr title="CameraControls">CC</abbr> has ["user inputs"](https://yomotsu.github.io/camera-controls/#md:user-input-config) options:
 
 ```tsx
 import { CameraControlsImpl } from "@react-three/drei"
