--- a/docs/controls/camera-controls.mdx
+++ b/docs/controls/camera-controls.mdx
@@ -24,9 +24,14 @@ type CameraControlsProps = {
   /** Reference this CameraControls instance as state's `controls` */
   makeDefault?: boolean
   /** Events callbacks, see: https://github.com/yomotsu/camera-controls#events */
-  onStart?: (e?: { type: 'controlstart' }) => void
-  onEnd?: (e?: { type: 'controlend' }) => void
-  onChange?: (e?: { type: 'update' }) => void
+  onControlstart?: (e? { type: 'controlstart' }) => void
+  onControl?: (e? { type: 'control' }) => void
+  onControlend?: (e? { type: 'controlend' }) => void
+  onTransitionstart?: (e? { type: 'transitionstart' }) => void
+  onUpdate?: (e? { type: 'update' }) => void
+  onWake?: (e? { type: 'wake' }) => void
+  onRest?: (e? { type: 'rest' }) => void
+  onSleep?: (e? { type: 'sleep' }) => void
 }
 ```
 
