--- a/docs/controls/camera-controls.mdx
+++ b/docs/controls/camera-controls.mdx
@@ -37,6 +37,12 @@ type CameraControlsProps = {
 }
 ```
 
+## Breaking changes
+
+### 10.5.0
+
+This drei version includes camera-controls v3: see the [https://github.com/yomotsu/camera-controls?tab=readme-ov-file#v3-migration-guide](migration guide)
+
 ## Recipes
 
 ### `[camera]`
