--- a/docs/controls/camera-controls.mdx
+++ b/docs/controls/camera-controls.mdx
@@ -41,7 +41,7 @@ type CameraControlsProps = {
 
 ### 10.5.0
 
-This drei version includes camera-controls v3: see the [https://github.com/yomotsu/camera-controls?tab=readme-ov-file#v3-migration-guide](migration guide)
+This drei version includes camera-controls v3: see the [migration guide](https://github.com/yomotsu/camera-controls?tab=readme-ov-file#v3-migration-guide) 
 
 ## Recipes
 
