--- a/docs/misc/html.mdx
+++ b/docs/misc/html.mdx
@@ -1,6 +1,6 @@
 ---
 title: Html
-sourceocde: src/web/Html.tsx
+sourcecode: src/web/Html.tsx
 ---
 
 [![](https://img.shields.io/badge/-storybook-%23ff69b4)](https://drei.vercel.app/?path=/story/misc-html--html-st) ![](https://img.shields.io/badge/-Dom only-red)
