--- a/docs/staging/center.mdx
+++ b/docs/staging/center.mdx
@@ -32,6 +32,8 @@ export type Props = ThreeElements['group'] & {
   disableY?: boolean
   /** Disable z-axis centering */
   disableZ?: boolean
+  /** object to compute box3 from */
+  object?: THREE.Object3D | null
   /** Precision, defaults to true, see https://threejs.org/docs/index.html?q=box3#api/en/math/Box3.setFromObject */
   precise?: boolean
   /** Callback, fires in the useLayoutEffect phase, after measurement */
