fix(docs): center.mdx

--- a/docs/staging/center.mdx
+++ b/docs/staging/center.mdx
@@ -14,7 +14,9 @@ sourcecode: src/core/Center.tsx
   </li>
 </Grid>
 
-Calculates a boundary box and centers its children accordingly.
+<Intro>
+  Group `children` together and -offset them by half of their bounding box.
+</Intro>
 
 ```tsx
 export type Props = ThreeElements['group'] & {
