docs: onDrag function parameter destructuring
Destructuring not needed, first parameter is the matrix4

--- a/docs/gizmos/pivot-controls.mdx
+++ b/docs/gizmos/pivot-controls.mdx
@@ -83,5 +83,5 @@ return (
     ref={ref}
     matrix={matrix}
     autoTransform={false}
-    onDrag={({ matrix: matrix_ }) => matrix.copy(matrix_)}
+    onDrag={(matrix_) => matrix.copy(matrix_)}
 ```
