fix(CameraControls): move export path to make it dom-only

--- a/docs/controls/camera-controls.mdx
+++ b/docs/controls/camera-controls.mdx
@@ -1,7 +1,9 @@
 ---
 title: CameraControls
-sourcecode: src/core/CameraControls.tsx
+sourcecode: src/web/CameraControls.tsx
 ---
+
+![](https://img.shields.io/badge/-Dom only-red)
 
 <Grid cols={4}>
   <li>
