--- a/docs/misc/use-camera.mdx
+++ b/docs/misc/use-camera.mdx
@@ -1,6 +1,6 @@
 ---
-title: useCamera
-sourcecode: src/core/useCamera.tsx
+title: useCustomRaycast
+sourcecode: src/core/useCustomRaycast.tsx
 ---
 
 [![](https://img.shields.io/badge/-storybook-%23ff69b4)](https://drei.vercel.app/?path=/story/misc-usecamera--use-camera-st)
@@ -14,5 +14,5 @@ sourcecode: src/core/useCamera.tsx
 A hook for the rare case when you are using non-default cameras for heads-up-displays or portals, and you need events/raytracing to function properly (raycasting uses the default camera otherwise).
 
 ```jsx
-<mesh raycast={useCamera(customCamera)} />
+<mesh raycast={useCustomRaycast(customCamera)} />
 ```
