feat: stars docs: dev docs other examples

--- a/src/legacy/Staging/Stars/Stars.docs.mdx
+++ b/src/legacy/Staging/Stars/Stars.docs.mdx
@@ -1,11 +1,13 @@
 ---
-title: Stars
-sourcecode: src/core/Staging/Stars/Stars.tsx
+title: Stars (Legacy)
+sourcecode: src/legacy/Staging/Stars/Stars.tsx
 ---
 
 {/* AUTO:badges */}
 
 {/* AUTO:description */}
+
+Legacy WebGL version using Points geometry with `gl_PointSize` for variable point sizes.
 
 ```jsx
 <Stars radius={100} depth={50} count={5000} factor={4} saturation={0} fade speed={1} />
