--- a/docs/portals/view.mdx
+++ b/docs/portals/view.mdx
@@ -20,7 +20,7 @@ sourcecode: src/core/Portal/View/View.tsx
   </li>
 </Grid>
 
-Uses gl.scissor to create viewport segments tied to HTML tracking elements.
+Uses renderer.scissor to create viewport segments tied to HTML tracking elements.
 Allows multiple views with a single canvas. Views follow their tracking elements,
 scroll, resize, etc. Use View.Port inside Canvas to render all views.
 
